src/objects/Report_SEO_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Check_Rank_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Rank Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designed_Link_Building_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Designed Link Building Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_Building_Campaign_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link Building Campaign Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_Building_Company__c</fullName>
        <label>Link Building Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Building_Keywords_and_URL__c</fullName>
        <label>Link Building Keywords and URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Keywords_Ranking__c</fullName>
        <label>Number of Keywords Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_Sourced_to_Link_Building_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Sourced to Link Building Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipLabel>SEO Analysis</relationshipLabel>
        <relationshipName>SEO_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SEO Analysis</label>
    <nameField>
        <label>SEO Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEO Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>